discussed list,table,iframe and form

--- a/html/header.html
+++ b/html/header.html
@@ -7,11 +7,24 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Lorem.</h1>
-    <h2>Suscipit!</h2>
-    <h3>Ullam!</h3>
-    <h4>Fuga.</h4>
-    <h5>Non?</h5>
-    <h6>Eum?</h6>
+    <div
+      style="
+        background-color: rgb(235, 198, 173);
+        width: 90%;
+        margin: auto;
+        padding: 10px;
+      "
+    >
+      <h1>Lorem.</h1>
+      <h2>Suscipit!</h2>
+      <h3>Ullam!</h3>
+      <h4>Fuga.</h4>
+      <h5>Non?</h5>
+      <h6>Eum?</h6>
+      <div>
+        <span>some test</span><span>some test</span><span>some test</span
+        ><span>some test</span><span>some test</span>
+      </div>
+    </div>
   </body>
 </html>
