Removed invalid p tag

--- a/html/index1.html
+++ b/html/index1.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>First HTML !!</title>
     <style>
-      p{
-        color:lightcoral
+      p {
+        color: lightcoral;
       }
     </style>
   </head>
@@ -20,7 +20,7 @@
           <div class="description">
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Temporibus, repellendus doloremque. <p>asdfsd</p> Saepe ab iusto libero possimus
+              Temporibus, repellendus doloremque. Saepe ab iusto libero possimus
               veritatis reiciendis odio nam!
             </p>
             <p>
